			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

25-Jun-2003
~~~~~~~~~~~
Button-2 drags on panel applets always work now, even if the applet doesn't
forward them explicitly.

19-Jun-2003
~~~~~~~~~~~
Fix scrolling problem with GTK+-2.2.2 (reported by Alastair Porter, with
help from Götz Waschk).

16-Jun-2003
~~~~~~~~~~~
Bugfix: Resize on style change didn't do anything (Andy Hanton).
Bugfix: Dragging to panel and pinboard directories didn't offer the DnD
	menu (reported by BluPhoenyx).

11-Jun-2003
~~~~~~~~~~~
New SetBackdrop() SOAP method (Matthew Weier O'Phinney).

04-Jun-2003
~~~~~~~~~~~
Bugfix: Closing a window using the menu didn't offer to unmount (James Bursa).

02-Jun-2003
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).

01-Jun-2003
~~~~~~~~~~~
Fix compiler warning when not using dnotify (reported by Damien Couderc).
Show files being operated upon in action windows (Stephen Watson).

30-May-2003 (Release 2.0.0)
~~~~~~~~~~~
Updated Japanese translation (Hirosi Utumi).

29-May-2003
~~~~~~~~~~~
Updated it.po and AppInfo.xml (Yuri Bongiorno).

28-May-2003 (Release 1.3.10)
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

27-May-2003
~~~~~~~~~~~
When dragging a lasso box in List view, don't stop scrolling when the pointer
leaves the window (reported by Robert Davison).
Updated Polish translation (Andrzej Borsuk).
Updated Italian translation (Yuri Bongiorno).

26-May-2003
~~~~~~~~~~~
Updated German translation (Guido Schimmels).

25-May-2003
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

24-May-2003
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

22-May-2003
~~~~~~~~~~~
Minor updates to the manual.
Bugfix: Using the Edit MIME types button in the Options window opened the
	old directory. Refer people to the MIME-Editor application instead.

18-May-2003
~~~~~~~~~~~
Fixed focussing problems in Icons View (reported by Andrzej Radecki).
Updated French manual translation (Arnaud Calvo).
