@@ -251,7 +251,6 @@ operation, such as copying or deleting some files.</label>
       </hbox>
     </frame>
     <frame label='Behaviour'>
-      <toggle name='bind_menu_button_2' label='Menu on button 2 (RISC OS style)'>Use button 2, the middle button (click both buttons at once on two button mice), to pop up the menu. If off, use button 3 (right) instead.</toggle>
       <entry name='menu_xterm' label="`Xterm Here' program">The program to launch when you choose `Xterm Here' from the menu.</entry>
     </frame>
     <frame label='Keyboard shortcuts'>
