@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+27-Jun-2003
+~~~~~~~~~~~
+Removed the menu-on-button-2 option. It was too inconsistant with everything
+else, including panel applets and window managers, to be useful. Edit bind.c if
+you really need it.
+
 25-Jun-2003
 ~~~~~~~~~~~
 Button-2 drags on panel applets always work now, even if the applet doesn't
